--- a/style.css
+++ b/style.css
@@ -35,8 +35,6 @@ footer a:hover {
   margin: 0 auto;
   display: flex;
   list-style-type: none;
-  padding: 0;
-  width: 100%;
   justify-content: space-between;
 }
 .nav__items li a {
@@ -44,7 +42,6 @@ footer a:hover {
   text-decoration: none;
   color: #ffffff;
   text-transform: uppercase;
-  font-size: 1.2rem;
   letter-spacing: 1px;
 }
 .nav__items li a:hover {
@@ -59,20 +56,21 @@ footer a:hover {
     padding-right: 0;
     width: 100vw;
     flex-direction: column;
-    align-items: flex-end;
-    justify-content: flex-end;
     background-color: transparent;
     backdrop-filter: none;
+    position: absolute;
+    padding-top: 0;
   }
   .nav__items {
     flex-direction: column;
     justify-content: center;
+    gap: 2rem;
     width: 100vw;
     text-align: center;
     backdrop-filter: blur(10px);
     transform: translateX(100%);
     height: 75vh;
-    transition: transform 300ms ease-in;
+    transition: transform 400ms ease-in;
   }
   .nav__items[data-visible=true] {
     transform: translate(0%);
